[gd_scene load_steps=9 format=3 uid="uid://dexajhy20l76"]

[ext_resource type="PackedScene" uid="uid://e2a6mg1epie4" path="res://src/world/PuzzlePieces/water_spout/model/water_spout_model.tscn" id="1_3d7kl"]
[ext_resource type="Script" path="res://src/world/PuzzlePieces/water_spout/water_spout.gd" id="1_dqean"]
[ext_resource type="PackedScene" uid="uid://dr5pw4okii6t6" path="res://src/world/PuzzlePieces/Canons/Projectile/canon_projectile.tscn" id="2_vvcvd"]
[ext_resource type="AudioStream" uid="uid://djv07ubas7ejx" path="res://src/world/PuzzlePieces/water_spout/sfx/spout_pop.mp3" id="4_h1imb"]
[ext_resource type="ArrayOccluder3D" uid="uid://bottfayduussr" path="res://src/world/PuzzlePieces/water_spout/water_spout.occ" id="5_n7h8k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_famom"]
size = Vector3(1.41852, 0.940918, 1.42822)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sx1yf"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_ein4e"]
material = SubResource("StandardMaterial3D_sx1yf")
size = Vector2(3, 3)

[node name="WaterSpout" type="CharacterBody3D" node_paths=PackedStringArray("model")]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_dqean")
projectile = ExtResource("2_vvcvd")
model = NodePath("WaterSpoutModel")

[node name="WaterSpoutModel" parent="." instance=ExtResource("1_3d7kl")]

[node name="SpawnPoint" type="Marker3D" parent="WaterSpoutModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20606, 1.32362)

[node name="TargetDirection" type="Marker3D" parent="WaterSpoutModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20606, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00473022, 0.470459, 0.00219727)
shape = SubResource("BoxShape3D_famom")

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="." groups=["Wood"]]
stream = ExtResource("4_h1imb")
bus = &"SFX"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ein4e")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
occluder = ExtResource("5_n7h8k")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
